kubernetes/apps/media/jellyfin/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-internal
  namespace: media
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - jellyfin.krapulax.home
  rules:
    - backendRefs:
        - name: jellyfin
          namespace: media
          port: 8096
