kubernetes/apps/media/jellyfin/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jelly.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/description: Media streaming server
    gethomepage.dev/weight: "20"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - jelly.krapulax.dev
  rules:
    - backendRefs:
        - name: jellyfin
          namespace: media
          port: 8096
